infra/k8s/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meter-lab
  labels:
    name: meter-lab
    app: meter-lab
