infra/k8s/gke/auth-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: meter-lab
  labels:
    app: meter-lab
spec:
  type: ClusterIP
  selector:
    io.kompose.service: auth
  ports:
  - name: auth
    port: 5090
    targetPort: 5090
    protocol: TCP
