infra/k8s/gke/backend-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: meter-lab
spec:
  type: ClusterIP
  selector:
    io.kompose.service: backend
  ports:
  - name: backend
    port: 5070
    targetPort: 5070
    protocol: TCP
