infra/k8s/gke/web-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: meter-lab
spec:
  type: ClusterIP
  selector:
    io.kompose.service: web
  ports:
  - name: web
    port: 5080
    targetPort: 5080
    protocol: TCP
