infra/k8s/gke/websocket-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  labels:
    app: meter-lab
spec:
  type: ClusterIP
  selector:
    io.kompose.service: backend
  ports:
  - name: http
    port: 5071
    targetPort: 5071
    protocol: TCP
