infra/k8s/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meter-lab-ingress
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5090
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5070
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 5071
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 5080
